--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,9 @@
 
 # Project-local glide cache, RE: https://github.com/Masterminds/glide/issues/736
 .glide/
+.idea/inspectionProfiles/
+.idea/modules.xml
+.idea/rssx.iml
+.idea/workspace.xml
+.idea/vcs.xml
+osChina.xml
