--- a/app.conf
+++ b/app.conf
@@ -2,3 +2,6 @@ log.level=debug
 log.to="file,console"
 project.name=rssx
 client.dir=/home/wiloon/projects/rssx-client/dist
+
+# minute
+sync.duration=5
