###  v2.0.0 定时清除过期新闻

--- a/config.toml
+++ b/config.toml
@@ -10,3 +10,7 @@ path="/home/wiloon/projects/rssx/rssx-client/dist/"
 [sync]
 # minute
 duration=60
+
+[news]
+expire-time="-720h"
+gc-duration="24h"
