redis mysql url

--- a/config.toml
+++ b/config.toml
@@ -3,10 +3,10 @@ port="3000"
 dev-mode=false
 
 [mysql]
-address="192.168.50.114:3306"
+address="mysql.wiloon.com:3306"
 
 [redis]
-address="192.168.50.114:6379"
+address="redis.wiloon.com:6379"
 
 [ui]
 path="/home/wiloon/projects/rssx/rssx-client/dist/"
