--- a/rssx-ui/package.json
+++ b/rssx-ui/package.json
@@ -13,6 +13,7 @@
     "@mdi/font": "^3.6.95",
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
+    "lodash": "4.17.21",
     "register-service-worker": "^1.7.1",
     "roboto-fontface": "*",
     "vue": "^2.6.11",
