login, register, gorm

--- a/rssx-api/Dockerfile
+++ b/rssx-api/Dockerfile
@@ -1,8 +1,4 @@
-FROM alpine:3.15.0 AS prod
-
-RUN apk update
-RUN apk upgrade
-RUN apk add --update go=1.17.8 gcc=6.3.0-r4 g++=6.3.0-r4
+FROM archlinux:base-20220306.0.49442 AS prod
 
 ARG APP_NAME=rssx-api
 COPY ${APP_NAME} /data/${APP_NAME}/${APP_NAME}
