--- a/rssx-api/Dockerfile
+++ b/rssx-api/Dockerfile
@@ -1,10 +1,13 @@
 FROM archlinux:base-20220306.0.49442 AS prod
 
+MAINTAINER wiloon <wiloon.wy@gmail.com>
+
+# config file
+ENV APP_CONFIG_PATH /etc/${APP_NAME}
 ARG APP_NAME=rssx-api
-COPY ${APP_NAME} /data/${APP_NAME}/${APP_NAME}
+# bin
+COPY ${APP_NAME} /usr/local/bin
 COPY config.toml config.toml
 COPY config.toml /data/${APP_NAME}/config.toml
-
 ENV APPLICATION_NAME ${APP_NAME}
-
-CMD "/data/${APPLICATION_NAME}/${APPLICATION_NAME}"
+CMD "/usr/local/bin/${APPLICATION_NAME}"
