--- a/rssx-api/config.toml
+++ b/rssx-api/config.toml
@@ -6,7 +6,7 @@ security-key="fa6ee430-ebf6-44f2-a18b-64d691cd2dae"
 address="mysql.wiloon.com:3306"
 
 [redis]
-address="redis.wiloon.com:6379"
+address="10.107.3.107:16379"
 
 [sync]
 # minute
