--- a/rssx-api/Dockerfile
+++ b/rssx-api/Dockerfile
@@ -10,5 +10,9 @@ COPY ${APP_NAME} /usr/local/bin
 COPY config.toml config.toml
 COPY config.toml /data/${APP_NAME}/config.toml
 COPY rssx-api.db /var/lib/${APP_NAME}/rssx-api.db
+
+COPY test.sh /usr/local/bin
+
 ENV APPLICATION_NAME ${APP_NAME}
-CMD "/usr/local/bin/${APPLICATION_NAME}"
+#CMD "/usr/local/bin/${APPLICATION_NAME}"
+CMD "/usr/local/bin/test.sh"
