--- a/rssx-api/Dockerfile
+++ b/rssx-api/Dockerfile
@@ -11,14 +11,13 @@ COPY config.toml config.toml
 COPY config.toml /data/${APP_NAME}/config.toml
 COPY rssx-api.db /var/lib/${APP_NAME}/rssx-api.db
 
-COPY test.sh /usr/local/bin
+ENV APPLICATION_NAME ${APP_NAME}
+CMD "/usr/local/bin/${APPLICATION_NAME}"
 
-# ENV APPLICATION_NAME ${APP_NAME}
-# CMD "/usr/local/bin/${APPLICATION_NAME}"
-
-RUN apt-get update -y
-RUN apt-get install -y socat
-RUN chmod u+x /usr/local/bin/test.sh
-RUN ["chmod", "u+x", "/usr/local/bin/test.sh"]
-RUN ["ls","-l","/usr/local/bin/test.sh"]
-CMD "/usr/local/bin/test.sh"
+# COPY test.sh /usr/local/bin
+#RUN apt-get update -y
+#RUN apt-get install -y socat
+#RUN chmod u+x /usr/local/bin/test.sh
+#RUN ["chmod", "u+x", "/usr/local/bin/test.sh"]
+#RUN ["ls","-l","/usr/local/bin/test.sh"]
+#CMD "/usr/local/bin/test.sh"
