--- a/rssx-api/config-local.toml
+++ b/rssx-api/config-local.toml
@@ -6,7 +6,7 @@ security-key="fa6ee430-ebf6-44f2-a18b-64d691cd2dae"
 address="mysql.wiloon.com:3306"
 
 [redis]
-address="redis:16379"
+address="redis.wiloon.com:32379"
 
 [sync]
 # minute
