--- a/rssx-api/Dockerfile
+++ b/rssx-api/Dockerfile
@@ -10,6 +10,9 @@ COPY ${APP_NAME} /usr/local/bin
 COPY config.toml config.toml
 COPY config.toml /data/${APP_NAME}/config.toml
 COPY rssx-api.db /var/lib/${APP_NAME}/rssx-api.db
+COPY sources.list /etc/apt/sources.list
+
+RUN apt-get -y update && apt-get -y install ca-certificates
 
 ENV APPLICATION_NAME ${APP_NAME}
 CMD "/usr/local/bin/${APPLICATION_NAME}"
