run rssx in dev mode

--- a/rssx-api/.env.example
+++ b/rssx-api/.env.example
@@ -1,21 +1,32 @@
-# RSSX Configuration
-RSS_SYNC_AUTO=true
-SECURITY_KEY=your-security-key-here
+# ============================================
+# RSSX API 配置文件（生产环境示例）
+# ============================================
+# 本地开发：复制此文件为 .env.local 并修改相应配置
+# 容器部署：通过容器环境变量注入配置
+# ============================================
 
-# Redis Configuration
+# ---- RSSX 核心配置 ----
+RSSX_RSS_SYNC_AUTO=true
+RSSX_SECURITY_KEY=your-security-key-here-change-in-production
+
+# ---- SQLite 数据库配置 ----
+SQLITE_PATH=/var/lib/rssx-api/rssx-api.db
+
+# ---- Redis 配置 ----
 REDIS_ADDRESS=127.0.0.1:6379
+REDIS_PASSWORD=
 
-# MySQL Configuration
-MYSQL_ADDRESS=localhost:3306
-
-# Sync Configuration (in minutes)
+# ---- RSS 同步配置 ----
+# 同步间隔（分钟）
 SYNC_DURATION=60
 
-# News Configuration
+# ---- 新闻配置 ----
+# 过期时间（负数表示保留多久的历史，-720h = 30天）
 NEWS_EXPIRE_TIME=-720h
+# GC 清理间隔
 NEWS_GC_DURATION=24h
 
-# Log Configuration
-LOG_LEVEL=debug
-LOG_PATH=/data/rssx/logs/
-LOG_FILE_NAME=rssx.log
+# ---- 日志配置 ----
+LOG_LEVEL=info
+LOG_PATH=/var/log/rssx/
+LOG_FILE_NAME=rssx-api.log
