--- a/rssx-api/.env.local
+++ b/rssx-api/.env.local
@@ -1,7 +1,7 @@
 # ============================================
 # RSSX API 本地开发配置
 # ============================================
-# 此文件不会被提交到 Git (already in .gitignore)
+# 此文件不会被提交到 Git (已加入 .gitignore)
 # ============================================
 
 # ---- RSSX 核心配置 ----
@@ -13,8 +13,7 @@ RSSX_SECURITY_KEY=local-dev-security-key
 SQLITE_PATH=./data/rssx-api.db
 
 # ---- Redis 配置 ----
-REDIS_ADDRESS=192.168.50.100:31322
-REDIS_PASSWORD=redis-2026
+REDIS_ADDRESS=127.0.0.1:6379
 
 # ---- RSS 同步配置 ----
 SYNC_DURATION=60
