--- a/rssx-ui/package.json
+++ b/rssx-ui/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "@achrinza/node-ipc": "^9.2.5",
     "@types/jest": "^24.0.19",
+    "@types/node": "^25.0.6",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -46,10 +47,11 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.2.2",
-    "sass": "^1.19.0",
+    "sass": "^1.32.13",
     "sass-loader": "^8.0.0",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
+    "tslib": "^2.8.1",
     "typescript": "~3.9.3",
     "vue-cli-plugin-vuetify": "2.4.5",
     "vue-template-compiler": "^2.6.11",
