--- a/rssx-api/config-local.toml
+++ b/rssx-api/config-local.toml
@@ -2,6 +2,9 @@
 rss-sync-auto=true
 security-key="fa6ee430-ebf6-44f2-a18b-64d691cd2dae"
 
+[sqlite]
+path="/var/lib/rssx-api/rssx-api.db"
+
 [mysql]
 address="mysql.wiloon.com:3306"
 
