--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -16,6 +16,12 @@ tasks:
     cmds:
       - lsof -ti :8080 | xargs kill -9 2>/dev/null || echo "No API process running on port 8080"
 
+  api:reset-password:
+    desc: "重置用户密码 (用法: task api:reset-password USER=用户名 PASSWORD=密码)"
+    dir: rssx-api
+    cmds:
+      - task reset-password USER={{.USER}} PASSWORD={{.PASSWORD}}
+
   ui:install:
     desc: 安装 UI 依赖（使用 pnpm + fnm）
     dir: rssx-ui
