--- a/rssx-api/.env.example
+++ b/rssx-api/.env.example
@@ -21,7 +21,10 @@ RSSX_RSS_SYNC_AUTO=true
 RSSX_SECURITY_KEY=your-security-key-here-change-in-production
 
 # ---- SQLite 数据库配置 ----
-SQLITE_PATH=/var/lib/rssx-api/rssx-api.db
+# 优先使用 DATABASE_PATH 环境变量
+DATABASE_PATH=/data/rssx/rssx.db
+# 兼容配置文件方式
+SQLITE_PATH=/data/rssx/rssx.db
 
 # RSS 同步间隔 (分钟)
 # ---- Redis 配置 ----
